# aletler

./: .gitignore  LICENSE  README.md  SConstruct
aletler/aletler.xcodeproj/: project.pbxproj
aletler/earsound/: main.cpp
aletler/fakemeshgenerator/: main.cpp
aletler/fastmultibubbletester/: main.cpp
aletler/test-sound/: main.cpp
aletler/watersound/: main.cpp
bmbie/: .fsm.swp  CMakeLists.txt
bmbie/cmake/: FindKNITRO.cmake  FindSndfile.cmake  FindTinyXML2.cmake  snd_edit_utils.cmake
bmbie/src/fsm/: BIESolver.cpp  BIESolver.h  BIESpec.cpp  BIESpec.h  BMBIESolver.cpp  BMBIESolver.h  CBIESolver.cpp  CBIESolver.h  dunavant.hpp
bmbie/src/gauss_quadra/: example.c
bmbie/src/geometry/: TriangleMesh.hpp
bmbie/src/tools/: .mesh_simp.cpp.swp  BMBIESolve.cpp  CMakeLists.txt
bmbie/src/utils/: nano_timer.c
include/geometry/: BoundingBox.h  MarchingSource.h  Triangle.h  TriangleMesh.h
include/numeric/: FastMultibubble.h
include/physics/: Bubble.h  Electrostatics.h  Fluid.h  PhysicalConstants.h
include/sound/: Bubble.h  BubbleSound.h  Monopole.h  SoundFileManager.h  SoundFrequency.h  SoundParameters.h  ZeroCrossing.h  util.h
meshes/: mitsuba.xml
python/: convertMeshes  convertMeshes.py  convertexr.sh  mitsubaXML.py  reindexNumberedFiles  run-bmbie.py  stl2obj.py
remesh/: CMakeLists.txt
remesh/cmake/: .sploosh_utils.cmake.swp  FindEigen.cmake  FindLibConfig.cmake  FindQGLViewer.cmake  snd_edit_external.cmake  sploosh_utils.cmake
remesh/src/: config.h
src/geometry/: BoundingBox.cpp  BoundingBox.h  MarchingSource.cpp  Triangle.cpp  TriangleMesh.cpp  TriangleMesh.h  TriangleQuadrature.h
src/io/: FileNameGen.h  (+1 more)
tests/: SConscript
(+59 files in other folders)
